--- a/Exercicios/03/index.html
+++ b/Exercicios/03/index.html
@@ -23,9 +23,9 @@
         <h3>Pseudo Seletor</h3>
         <ul>
             <li>Opção 01</li>
-            <li>opção</li>
-            <li>Opção 02</li>
+            <li>opção 02</li>
             <li>Opção 03</li>
+            <li>Opção 04</li>
         </ul>
 
     </div>
