Pagina de cards

--- a/Exercicios/04/index.html
+++ b/Exercicios/04/index.html
@@ -7,20 +7,59 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="quadrado">
-            <img src="img/doc.png" alt="">
+    <div class="main">
+    
+        <div class="container-principal">
+            <div class="container">
+                <div class="quadrado">
+                    <img src="img/pessoa1.jpg" alt="">
+                </div>
+                <div class="titulo">
+                    <h2>Teste 1</h2>
+                </div>
+                <div class="resumo">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptates non recusandae necessitatibus hic? Veniam sequi, consectetur magnam, laudantium possimus, at ut officiis itaque temporibus commodi autem maiores facere eaque.</p>
+                </div>
+                <div class="btn">
+                    <button>
+                        <a href="#">Click</a>
+                    </button>
+                </div>
+            </div>
+            <div class="container">
+                <div class="quadrado">
+                    <img src="img/pessoa2.jpg" alt="">
+                </div>
+                <div class="titulo">
+                    <h2>Teste 2</h2>
+                </div>
+                <div class="resumo">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptates non recusandae necessitatibus hic? Veniam sequi, consectetur magnam, laudantium possimus, at ut officiis itaque temporibus commodi autem maiores facere eaque.</p>
+                </div>
+                <div class="btn">
+                    <button>
+                        <a href="#">Click</a>
+                    </button>
+                </div>
+            </div>
+            <div class="container">
+                <div class="quadrado">
+                    <img src="img/pessoa3.jpg" alt="">
+                </div>
+                <div class="titulo">
+                    <h2>Teste 3</h2>
+                </div>
+                <div class="resumo">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptates non recusandae necessitatibus hic? Veniam sequi, consectetur magnam, laudantium possimus, at ut officiis itaque temporibus commodi autem maiores facere eaque.</p>
+                </div>
+                <div class="btn">
+                    <button>
+                        <a href="#">Click</a>
+                    </button>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="quadrado">
-            <img src="img/Ea.png" alt="">
-        </div>
-    </div>
-    <div class="container">
-        <div class="quadrado">
-            <img src="img/Un.jpg" alt="">
-        </div>
+
     </div>
 </body>
 </html>
