--- a/Exercicios/05/index.html
+++ b/Exercicios/05/index.html
@@ -11,9 +11,9 @@
     <div id="container-principal">
         <header>
             <div id="menu">
-                <img src="img/flower.png" alt="Logo">
+                <div id="logo"></div>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#container-02">Home</a></li>
                     <li><a href="#">Sobre</a></li>
                     <li><a href="#">Contato</a></li>
                     <li><a href="#">Saiba Mais</a></li>
@@ -21,6 +21,65 @@
             </div>
         </header>
         <main>
+            <section id="container-01">
+                <div id="box-01">
+                    <div class="box-img">
+                        
+                    </div>
+                    <div id="txt">
+                        <h1>Home Swet Home</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                             Facilis rem nisi atque inventore fugit deserunt 
+                             repellendus saepe, tempora qui at corporis iure 
+                             perferendis omnis repellat eos animi et mollitia assumenda?
+                             Facilis rem nisi atque inventore fugit deserunt 
+                             repellendus saepe, tempora qui at corporis iure 
+                             perferendis omnis repellat eos animi et mollitia assumenda?
+                             repellendus saepe, tempora qui at corporis iure 
+                             perferendis omnis repellat eos animi et mollitia assumenda?
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit facere, 
+                            soluta aliquam cum fugiat quos libero corrupti labore temporibus nulla 
+                            cupiditate est perferendis, provident officiis explicabo voluptate culpa 
+                            accusamus. Est?Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Molestias eius, officiis quod adipisci nisi nihil? Quo ex quam ab esse 
+                            quae ut, assumenda aperiam vitae dolorem optio, ad exercitationem 
+                            doloremque?Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Consequuntur labore sit deserunt impedit voluptatum doloribus numquam 
+                            minima soluta vel eaque illo quisquam et nihil at, fugit asperiores 
+                            eius sint perferendis!Lorem
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                             Facilis rem nisi atque inventore fugit deserunt 
+                             repellendus saepe, tempora qui at corporis iure 
+                             perferendis omnis repellat eos animi et mollitia assumenda?
+                             Facilis rem nisi atque inventore fugit deserunt 
+                             repellendus saepe, tempora qui at corporis iure 
+                             perferendis omnis repellat eos animi et mollitia assumenda?
+                             repellendus saepe, tempora qui at corporis iure 
+                             perferendis omnis repellat eos animi et mollitia assumenda?
+                        </p>
+                    </div>
+                </div>
+
+            </section>
+            <section id="container-02">
+                <div id="box-02">
+                    <h2>David</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, 
+                        mollitia? Hic numquam consequuntur nesciunt minus dignissimos 
+                        laudantium in error pariatur, nam optio eaque voluptas, velit 
+                        atque odit porro sapiente rem?
+                    </p>
+                    <div id="box-img-2">
+
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
         </footer>
